rework gift data system